Add jquery, change Readme.md and update .gitignore

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -10,5 +10,9 @@
 </head>
 <body>
     <h1>Git Title</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus alias at commodi ducimus error fugiat incidunt iure, maiores molestias, natus quam quasi! Autem dicta doloribus dolorum harum itaque possimus quasi?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusamus, animi autem, cumque distinctio doloremque facere fuga illum itaque maiores minus modi nam odio perferendis provident ratione, reiciendis ut veritatis.</p>
+
+    <script src="bower_components/jquery/dist/jquery.js"></script>
 </body>
 </html>
