--- a/app/index.html
+++ b/app/index.html
@@ -15,18 +15,18 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus alias at commodi ducimus error fugiat incidunt iure, maiores molestias, natus quam quasi! Autem dicta doloribus dolorum harum itaque possimus quasi?</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusamus, animi autem, cumque distinctio doloremque facere fuga illum itaque maiores minus modi nam odio perferendis provident ratione, reiciendis ut veritatis.</p>
 
-     <h2>NEW</h2>
+     <h2>Группа разработчиков/h2>
 
-     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci consequatur debitis dignissimos est et illum inventore minima officia perferendis veritatis. Accusamus aperiam expedita fugiat natus quaerat quia tempora totam veniam.</p>
+         <p>Для Степана</p>
 
-     <p>jslfdvnm</p>
-     <ul>
-         <li>jdkfhvbk1</li>
-         <li>jdkfhvbk2</li>
-         <li>jdkfhvbk3</li>
-         <li>jdkfhvbk4</li>
-         <li>jdkfhvbk5</li>
-     </ul>
+         <p>Для Жени</p>
+         <ul>
+             <li>1</li>
+             <li>2</li>
+             <li>3</li>
+             <li>4</li>
+             <li>5</li>
+         </ul>
 
 
      <script src="bower_components/jquery/dist/jquery.js"></script>
