--- a/app/index.html
+++ b/app/index.html
@@ -17,15 +17,15 @@
 
      <h2>NEW</h2>
 
-     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci consequatur debitis dignissimos est et illum inventore minima officia perferendis veritatis. Accusamus aperiam expedita fugiat natus quaerat quia tempora totam veniam.</p>
+     <p>Абзац Степана.</p>
 
-     <p>jslfdvnm</p>
+     <p>Ещё абзац Степана</p>
      <ul>
-         <li>jdkfhvbk1</li>
-         <li>jdkfhvbk2</li>
-         <li>jdkfhvbk3</li>
-         <li>jdkfhvbk4</li>
-         <li>jdkfhvbk5</li>
+         <li>Нормальный список Степана 1</li>
+         <li>Нормальный список Степана 2</li>
+         <li>Нормальный список Степана 3</li>
+         <li>Нормальный список Степана 4</li>
+         <li>Нормальный список Степана 5</li>
      </ul>
 
 
