--- a/app/index.html
+++ b/app/index.html
@@ -12,22 +12,22 @@
 
     <h1>Какой-то текст</h1>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus alias at commodi ducimus error fugiat incidunt iure, maiores molestias, natus quam quasi! Autem dicta doloribus dolorum harum itaque possimus quasi?</p>
+    <p>Lorem ipsum dolor xxx sit amet, consectetur adipisicing elit. Accusamus alias at commodi ducimus error fugiat incidunt iure, maiores molestias, natus quam quasi! Autem dicta doloribus dolorum harum itaque possimus quasi?</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusamus, animi autem, cumque distinctio doloremque facere fuga illum itaque maiores minus modi nam odio perferendis provident ratione, reiciendis ut veritatis.</p>
 
-     <h2>Группа разработчиков</h2>
+    <h2>Группа разработчиков</h2>
 
 
-     <p>Для Степана</p>
+    <p>Для Степана</p>
 
-     <p>Для Жени</p>
-     <ul>
-         <li>Нормальный список Степана 1</li>
-         <li>Нормальный список Степана 2</li>
-         <li>Нормальный список Степана 3</li>
-         <li>Нормальный список Степана 4</li>
-         <li>Нормальный список Степана 5</li>
-     </ul>
+    <p>Для Жени</p>
+    <ul>
+        <li>Нормальный список Степана 1</li>
+        <li>Нормальный список Степана 2</li>
+        <li>Нормальный список Степана 3</li>
+        <li>Нормальный список Степана 4</li>
+        <li>Нормальный список Степана 5</li>
+    </ul>
 
 
 
