--- a/app/index.html
+++ b/app/index.html
@@ -21,8 +21,10 @@
     <p>Для Степана</p>
 
     <p>Для Жени</p>
+    <!--  Комментарий  -->
+
     <ul>
-        <li>Нормальный список Степана 1</li>
+        <li>Нормальный список Степана 1</li> <!--Строка -->
         <li>Нормальный список Степана 2</li>
         <li>Нормальный список Степана 3</li>
         <li>Нормальный список Степана 4</li>
