добавил нового разроботчика

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
 <h1>Группа разработчиков</h1>
     <p>Евгений</p>
     <p>Степан</p>
-
+    <p>ТИПОК</p>
         <h2>Для Евгения</h2>
             <ul>
                 <li>1 Список для Евгения</li>
