Новая версия index.html

--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
         <li>Нормальный список Степана 3</li>
         <li>Нормальный список Степана 4</li>
         <li>Нормальный список Степана 5</li>
+        <li>Нормальный список Степана 6</li>
     </ul>
 
 
