--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,9 @@
         <li>Нормальный список Степана 4</li>
         <li>Нормальный список Степана 5</li>
         <li>Нормальный список Степана 6</li>
+        <li>Нормальный список Степана 6</li>
+        <li>Нормальный список Степана 6</li>
+        <li>Нормальный список Степана 6</li>
     </ul>
 
 
