--- a/app/index.html
+++ b/app/index.html
@@ -10,29 +10,21 @@
 </head>
 <body>
 
-    <h1>Группа разработчиков</h1>
+<h1>Группа разработчиков</h1>
     <p>Евгений</p>
     <p>Степан</p>
 
-    <p>Lorem111 ipsum dolor sit amet, consectetur adipisicing elit. Accusamus alias at commodi ducimus error fugiat incidunt iure, maiores molestias, natus quam quasi! Autem dicta doloribus dolorum harum itaque possimus quasi?</p>
-    <p>Lorem222 ipsum dolor sit amet, consectetur adipisicing elit. A accusamus, animi autem, cumque distinctio doloremque facere fuga illum itaque maiores minus modi nam odio perferendis provident ratione, reiciendis ut veritatis.</p>
-
-    <p>Для Степана</p>
-
+    <h2>Для Евгения</h2>
     <ul>
-        <li>Нормальный список Степана 1</li> <!--Строка -->
-        <li>Нормальный список Степана 2</li>
-        <li>Нормальный список Степана 3</li>
-        <li>Нормальный список Степана 4</li>
-        <li>Нормальный список Степана 5</li>
-        <li>Нормальный список Степана 6</li>
-        <li>Нормальный список Степана 7</li>
-        <li>Нормальный список Степана 8</li>
-        <li>Нормальный список Степана 9</li>
+        <li>1 Список для Евгения</li>
+        <li>2 Список для Евгения</li>
     </ul>
 
-
-
+    <h2>Для Степана</h2>
+    <ul>
+        <li>1 Список для Степан</li>
+        <li>2 Список для Степан</li>
+    </ul>
      <script src="bower_components/jquery/dist/jquery.js"></script>
 </body>
 </html>
