--- a/app/index.html
+++ b/app/index.html
@@ -1,30 +1,21 @@
 <!doctype html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Git раззработка</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport"
+              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Git раззработка</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
 
-<h1>Группа разработчиков</h1>
-    <p>Евгений</p>
-    <p>Степан</p>
+        <h1>Группа </h1>
 
         <h2>Для Евгения</h2>
-            <ul>
-                <li>1 Список для Евгения</li>
-                <li>2 Список для Евгения</li>
-            </ul>
 
         <h2>Для Степана</h2>
-            <ul>
-                <li>1 Список для Степан</li>
-                <li>2 Список для Степан</li>
-            </ul>
-     <script src="bower_components/jquery/dist/jquery.js"></script>
-</body>
+
+        <script src="bower_components/jquery/dist/jquery.js"></script>
+    </body>
 </html>
