--- a/app/index.html
+++ b/app/index.html
@@ -9,33 +9,33 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+    <!---->
+    <table>
+        <thead>
+            <tr>
+                <th>1 Колонка</th>
+                <th>2 Колонка</th>
+                <th>3 Колонка</th>
+            </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        </tbody>
+        </table>
 
-<<<<<<< HEAD
-        <h1>Группа </h1>
-
-        <h2>Для Евгения</h2>
-
-        <h2>Для Степана</h2>
-
-        <script src="bower_components/jquery/dist/jquery.js"></script>
     </body>
-=======
-    <h1>Группа разработчиков</h1>
-    <p>Евгений</p>
-    <p>Степан</p>
-
-    <h2>Для Евгения</h2>
-    <ul>
-        <li>1 Список для Евгения</li>
-        <li>2 Список для Евгения</li>
-    </ul>
-
-    <h2>Для Степана</h2>
-    <ul>
-        <li>1 Список для Степан</li>
-        <li>2 Список для Степан</li>
-    </ul>
-     <script src="bower_components/jquery/dist/jquery.js"></script>
-</body>
->>>>>>> master
 </html>
