--- a/app/index.html
+++ b/app/index.html
@@ -8,53 +8,28 @@
         <title>Git раззработка</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+<body>
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-        <h1>Группа </h1>
 
-        <h2>Для Евгения</h2>
-
-        <h2>Для Степана</h2>
-
-        <script src="bower_components/jquery/dist/jquery.js"></script>
-    </body>
-=======
-    <h1>Группа разработчиков</h1>
-    <p>Евгений</p>
-    <p>Степан</p>
+    <h1>Группа </h1>
 
     <h2>Для Евгения</h2>
     <ul>
-        <li>1 Список для Евгения</li>
-        <li>2 Список для Евгения</li>
+        <li>вопросы1</li>
+        <li>вопросы2</li>
+        <li>вопросы3</li>
+        <li>вопросы4</li>
+        <li>вопросы5</li>
     </ul>
-
     <h2>Для Степана</h2>
     <ul>
-        <li>1 Список для Степан</li>
-        <li>2 Список для Степан</li>
+        <li>вопросы1</li>
+        <li>вопросы2</li>
+        <li>вопросы3</li>
+        <li>вопросы4</li>
+        <li>вопросы5</li>
     </ul>
-     <script src="bower_components/jquery/dist/jquery.js"></script>
-</body>
->>>>>>> master
-=======
-        <h1>Группа разработчиков</h1>
-        <p>Евгений</p>
-        <p>Степан</p>
 
-        <h2>Для Евгения</h2>
-        <ul>
-            <li>1 Список для Евгения</li>
-            <li>2 Список для Евгения</li>
-        </ul>
-        <h2>Для Степана</h2>
-        <ul>
-            <li>1 Список для Степан</li>
-            <li>2 Список для Степан</li>
-        </ul>
-         <script src="bower_components/jquery/dist/jquery.js"></script>
-    </body>
->>>>>>> 07ace32cf16e775b914584d5fcea915449d406ba
+</body>
+
 </html>
