--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
         </thead>
         <tbody>
         <tr>
-            <td></td>
+            <td>1 колонка</td>
             <td></td>
             <td></td>
         </tr>
