--- a/app/index.html
+++ b/app/index.html
@@ -21,8 +21,8 @@
         <tbody>
         <tr>
             <td>1 колонка</td>
-            <td></td>
-            <td></td>
+            <td>2 колонка</td>
+            <td>3 колонка</td>
         </tr>
         <tr>
             <td></td>
