Удаление ветки  php тест

--- a/app/index.html
+++ b/app/index.html
@@ -22,9 +22,10 @@
         <h2>Для Степана</h2>
         <ul>
             <li>1 Список для Степан</li>
-            <li>2 Список для Степан</li>
+            <li>2 Списокдля Степан</li>
         </ul>
-         <script src="bower_components/jquery/dist/jquery.js"></script>
+        <p>Изменения в мастере</p>
+        <script src="bower_components/jquery/dist/jquery.js"></script>
 
     </body>
 </html>
