Изменил удаленную ветку feuture

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
 
         <h1>Группа разработчиков</h1>
         <p>Евгений</p>
-        <p>Степан</p>
+        <p>Степан - Изменил ветку feature</p>
 
         <h2>Для Евгения</h2>
         <ul>
